// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoConnectionMessage applies visibility class when scheduled 1`] = `
<DocumentFragment>
  <div
    class="status-message status-message-visible"
  >
    <div
      class="status-message-content"
    >
      Streetmix is having trouble connecting to the Internet.
      <button
        tabindex="0"
      >
        Try again
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NoConnectionMessage does not have the visibility class when mounted 1`] = `
<DocumentFragment>
  <div
    class="status-message"
  >
    <div
      class="status-message-content"
    >
      Streetmix is having trouble connecting to the Internet.
      <button
        tabindex="-1"
      >
        Try again
      </button>
    </div>
  </div>
</DocumentFragment>
`;
